fix spacing

--- a/style.css
+++ b/style.css
@@ -42,13 +42,12 @@ h2 {
 /* EVENTS */
 
 .day_header {
-  font-size: 1.5rem;
   position: sticky;
   top: 0;
+  margin: 0;
+  padding: 1rem;
   background: white;
-  opacity: 1;
-  margin: 0 1rem;
-  width: auto;
+  font-size: 1.5rem;
 }
 
 .day {
